--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <a href="about.html">About</a>
   <div id="card-holder">
     <div class="card">
-      <img src="/images/tree.png" alt="plant in hand">
+      <img src="images/tree.png" alt="plant in hand">
       <h3>Plan trees</h3>
     </div>
     <div class="card">
